zarf/k8s/base/yify-pod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yify-ingress
  namespace: yify-system
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /debug
        backend:
          service:
            name: yify-service
            port:
              number: 4000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: yify-service
            port:
              number: 3000
